merge: logic partial - wireless connection facade -> Thunderbolt Core api.wireless (6 files), PowerCostUtil idle-reserve + OverloadedIoCost (Java17 ceilDiv fix), MemoryCardConfigSupport matrix-count persistence; E5=3038